# LLM4Engineers

./: .gitignore  README.md  bedrocktest.py  firstagent.py  imagegen_venice.py  pyproject.toml  rag_agent_tcs_ollama.py  rag_agent_tcs_openai.py  rag_ollama_create_index.py  rag_ollama_qna_chatbot.py  rag_openai_qna_chatbot.py  sample_ollama_chat.py  sample_ollama_chat2.py  shell_scripts_for_ollama.sh
Source Material/: TCS - annual-report-2021-2022.txt  TCS - annual-report-2022-2023.txt  TCS - annual-report-2023-2024.faiss  TCS - annual-report-2023-2024.txt  TCS IPO - Red Herring Prospectus.txt
Source Material/data/: NSE Data YTD.xlsx  building_report.xlsx
basics/: cost_surface.py  encoder_decoder.py  perceptron_tips.py
chatbot/: sample_ollama_chat.py  sample_ollama_chat2.py
chatbot/chatbot1/: app.py  claude_client.py  config.py  start.sh
chatbot/chatbot1/templates/: index.html
chatbot/chatbot2/: app.py  config.py  ollama_client.py
chatbot/chatbot2/templates/: index.html
chatbot/chatbot3/: app.py  config.py  ollama_client.py
mcp/: MCP App Sequence Diagram.drawio  llm_check.py  requirements.txt
mcp/agent/: agentic_chatbot.py  agentic_chatbot2.py
mcp/email_server/: email_server.py
mcp/mcpclient/: mcpclient.py
mcp/nseserver/: nse_server1.py  nser_server_elicitation.py
rag/create_index/: create_index.py  startIndexing.sh
rag/dataagent_chatbot/: app.py  config.py  data_agent_engine.py  start.sh
rag/rag_chatbot/: app.py  config.py  rag_engine.py  start.sh
rag/ragagent_chatbot/: app.py  config.py  rag_agent_engine.py  start.sh
(+4 files in other folders)
